lustre/ldlm/ldlm_lockd.c
@@ -329,7 +329,7 @@ static void waiting_locks_callback(unsigned long unused)
                 ldlm_lock_to_ns(lock)->ns_timeouts++;
 		LDLM_ERROR(lock, "lock callback timer expired after %llds: "
                            "evicting client at %s ",
-			   ktime_get_real_seconds() - lock->l_last_activity,
+			   ktime_get_real_seconds() - lock->l_blast_sent,
                            libcfs_nid2str(
                                    lock->l_export->exp_connection->c_peer.nid));
 
@@ -459,7 +459,7 @@ static int ldlm_add_waiting_lock(struct ldlm_lock *lock)
 	}
 
 	ldlm_set_waited(lock);
-	lock->l_last_activity = ktime_get_real_seconds();
+	lock->l_blast_sent = ktime_get_real_seconds();
 	ret = __ldlm_add_waiting_lock(lock, timeout);
 	if (ret) {
 		/* grab ref on the lock if it has been added to the
@@ -939,8 +939,6 @@ int ldlm_server_blocking_ast(struct ldlm_lock *lock,
         if (AT_OFF)
                 req->rq_timeout = ldlm_get_rq_timeout();
 
-	lock->l_last_activity = ktime_get_real_seconds();
-
         if (lock->l_export && lock->l_export->exp_nid_stats &&
             lock->l_export->exp_nid_stats->nid_ldlm_stats)
                 lprocfs_counter_incr(lock->l_export->exp_nid_stats->nid_ldlm_stats,
@@ -1028,8 +1026,6 @@ int ldlm_server_completion_ast(struct ldlm_lock *lock, __u64 flags, void *data)
 					   RCL_CLIENT);
 		}
         }
-
-	lock->l_last_activity = ktime_get_real_seconds();
 
 	LDLM_DEBUG(lock, "server preparing completion AST");
 
@@ -1138,8 +1134,6 @@ int ldlm_server_glimpse_ast(struct ldlm_lock *lock, void *data)
         /* ptlrpc_request_alloc_pack already set timeout */
         if (AT_OFF)
                 req->rq_timeout = ldlm_get_rq_timeout();
-
-	lock->l_last_activity = ktime_get_real_seconds();
 
 	req->rq_interpret_reply = ldlm_cb_interpret;
 
@@ -1697,9 +1691,10 @@ int ldlm_request_cancel(struct ptlrpc_request *req,
                         pres = res;
                 }
 
-		if ((flags & LATF_STATS) && ldlm_is_ast_sent(lock)) {
+		if ((flags & LATF_STATS) && ldlm_is_ast_sent(lock) &&
+		    lock->l_blast_sent != 0) {
 			time64_t delay = ktime_get_real_seconds() -
-					 lock->l_last_activity;
+					 lock->l_blast_sent;
 			LDLM_DEBUG(lock, "server cancels blocked lock after %llds",
 				   (s64)delay);
 			at_measured(&lock->l_export->exp_bl_lock_at, delay);
